--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
     testImplementation 'com.codeborne:selenide:6.17.2'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
+//    testCompileOnly 'org.projectlombok.lombok:1.18.4'
+//    testAnnotationProcessor 'org.projectlombok.lombok:1.18.4'
+//    testRuntimeOnly 'org.slf4j.slf4j-simple:2.0.3'
 }
 
 test {
